--- a/training_report.html
+++ b/training_report.html
@@ -35,25 +35,25 @@
 <div class="container">
 <h1>SLITHER.IO NEAT BOT - TRAINING ANALYSIS</h1>
 <p>File: training_stats.csv</p>
-<p>Total evaluations: 347</p>
+<p>Total evaluations: 350</p>
 <h3>OVERALL STATISTICS</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3221.5</td><td>8760.3</td><td>284.8</td></tr><tr><td>Survival Time (s)</td><td>93.0</td><td>126.8</td><td>60.0</td></tr><tr><td>Food Eaten</td><td>27.3</td><td>46</td><td>2</td></tr><tr><td>Max Length</td><td>27.3</td><td>46</td><td>2</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3214.2</td><td>8760.3</td><td>284.8</td></tr><tr><td>Survival Time (s)</td><td>92.9</td><td>126.8</td><td>60.0</td></tr><tr><td>Food Eaten</td><td>27.3</td><td>46</td><td>2</td></tr><tr><td>Max Length</td><td>27.3</td><td>46</td><td>2</td></tr></table>
 <h3>CAUSE OF DEATH</h3>
-<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>270 (77.8%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>77 (22.2%)</span><span style='display: inline-block; width: 57px; height: 20px; background-color: #4CAF50;'></span></div></div>
+<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>273 (78.0%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>77 (22.0%)</span><span style='display: inline-block; width: 56px; height: 20px; background-color: #4CAF50;'></span></div></div>
 <h3>RECENT PERFORMANCE (Last 100 vs First 100)</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>2962.1</td><td>↓ -329.2</td></tr><tr><td>Avg Food</td><td>27.8</td><td>26.5</td><td>↓ -1.4</td></tr><tr><td>Avg Length</td><td>27.8</td><td>26.5</td><td>↓ -1.4</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>88.9</td><td>↓ -5.0</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>2958.1</td><td>↓ -333.2</td></tr><tr><td>Avg Food</td><td>27.8</td><td>26.5</td><td>↓ -1.4</td></tr><tr><td>Avg Length</td><td>27.8</td><td>26.5</td><td>↓ -1.4</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>88.2</td><td>↓ -5.8</td></tr></table>
 <p>Bots that ate food: 100% → 100%</p>
 <h3>TOP 10 PERFORMERS</h3>
 <table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>#</th><th>GenomeID</th><th>Fitness</th><th>Time</th><th>Food</th><th>Len</th><th>Death</th></tr><tr><td>1</td><td>4</td><td>8760.3</td><td>120.1s</td><td>42</td><td>42</td><td>Unknown</td></tr><tr><td>2</td><td>136</td><td>8065.8</td><td>121.0s</td><td>39</td><td>39</td><td>Unknown</td></tr><tr><td>3</td><td>52</td><td>7487.8</td><td>122.2s</td><td>36</td><td>36</td><td>Unknown</td></tr><tr><td>4</td><td>220</td><td>6977.2</td><td>120.0s</td><td>33</td><td>33</td><td>Unknown</td></tr><tr><td>5</td><td>19</td><td>6819.1</td><td>126.2s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>6</td><td>17</td><td>6818.5</td><td>124.8s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>7</td><td>282</td><td>6752.5</td><td>120.0s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>8</td><td>95</td><td>6658.3</td><td>126.8s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>9</td><td>96</td><td>6616.9</td><td>125.7s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>10</td><td>271</td><td>6593.1</td><td>124.4s</td><td>31</td><td>31</td><td>Unknown</td></tr></table>
 <h3>LEARNING ASSESSMENT</h3>
 <p>Improvement (2nd half vs 1st half):</p>
-<p>✗ Fitness:  -300.9 (NO IMPROVEMENT)</p>
+<p>✗ Fitness:  -296.4 (NO IMPROVEMENT)</p>
 <p>✗ Food:     -0.6 (NOT LEARNING TO EAT!)</p>
 <br>
 <p>Recommendations:</p>
 <p>⚠ No fitness improvement - Consider restarting with fresh population</p>
 <br>
-<p>Analysis completed at 2026-02-04 08:07:52</p>
+<p>Analysis completed at 2026-02-04 08:08:54</p>
 <div class="chart-container">
     <canvas id="chart0"></canvas>
 </div>
@@ -61,10 +61,10 @@
 new Chart(document.getElementById('chart0'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
         datasets: [{
             label: 'Fitness Progress',
-            data: [np.float64(4115.5), np.float64(2950.0), np.float64(3758.6), np.float64(4300.1), np.float64(3578.0), np.float64(2323.7), np.float64(2959.2), np.float64(3753.1), np.float64(2366.0), np.float64(3271.8), np.float64(3000.3), np.float64(2991.0), np.float64(3017.1), np.float64(3038.1), np.float64(2914.2), np.float64(3302.1), np.float64(3982.1), np.float64(4099.0), np.float64(3579.6), np.float64(4194.7), np.float64(4132.1), np.float64(3695.3), np.float64(3569.5), np.float64(3865.2), np.float64(2390.7), np.float64(2974.1), np.float64(3476.8), np.float64(2449.3), np.float64(3643.7), np.float64(3514.0), np.float64(4167.1), np.float64(2997.1), np.float64(3155.1), np.float64(3190.3), np.float64(2933.6), np.float64(3174.6), np.float64(2979.6), np.float64(2377.5), np.float64(3844.6), np.float64(3563.7), np.float64(2930.3), np.float64(2489.2), np.float64(2953.1), np.float64(2297.2), np.float64(3463.9), np.float64(3052.8), np.float64(2345.4), np.float64(4247.9), np.float64(3020.5), np.float64(3118.8), np.float64(2336.9), np.float64(2207.6), np.float64(3771.7), np.float64(3629.6), np.float64(3038.1), np.float64(2617.4), np.float64(2676.1), np.float64(3029.0)],
+            data: [np.float64(3836.4), np.float64(2912.4), np.float64(4163.9), np.float64(4450.1), np.float64(2335.4), np.float64(2860.5), np.float64(3527.0), np.float64(3095.6), np.float64(3032.3), np.float64(2339.6), np.float64(3417.8), np.float64(2962.6), np.float64(2828.7), np.float64(3360.6), np.float64(5133.8), np.float64(3320.0), np.float64(3842.5), np.float64(3974.7), np.float64(3998.2), np.float64(3410.2), np.float64(3130.3), np.float64(2402.0), np.float64(3849.2), np.float64(2428.2), np.float64(3446.7), np.float64(3884.5), np.float64(3904.7), np.float64(3047.0), np.float64(3013.3), np.float64(2933.2), np.float64(3030.8), np.float64(2910.6), np.float64(2521.6), np.float64(4027.4), np.float64(3373.7), np.float64(2444.0), np.float64(2856.9), np.float64(2283.0), np.float64(3400.3), np.float64(2885.4), np.float64(3972.2), np.float64(2928.6), np.float64(3000.7), np.float64(2367.5), np.float64(3334.7), np.float64(3533.9), np.float64(2968.9), np.float64(2554.4), np.float64(2678.9), np.float64(2793.4)],
             borderColor: '#2196F3',
             backgroundColor: '#2196F322',
             fill: true,
@@ -95,10 +95,10 @@ new Chart(document.getElementById('chart0'), {
 new Chart(document.getElementById('chart1'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
         datasets: [{
             label: 'Food Eaten Progress',
-            data: [np.float64(29.8), np.float64(26.8), np.float64(28.0), np.float64(27.8), np.float64(27.0), np.float64(26.2), np.float64(26.8), np.float64(28.7), np.float64(26.7), np.float64(28.8), np.float64(26.8), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(26.3), np.float64(30.8), np.float64(30.3), np.float64(26.7), np.float64(27.5), np.float64(28.0), np.float64(27.3), np.float64(27.5), np.float64(27.2), np.float64(28.5), np.float64(27.2), np.float64(26.7), np.float64(26.7), np.float64(27.3), np.float64(27.5), np.float64(26.8), np.float64(27.7), np.float64(26.8), np.float64(28.8), np.float64(28.8), np.float64(26.8), np.float64(28.7), np.float64(27.2), np.float64(26.7), np.float64(29.8), np.float64(27.2), np.float64(26.7), np.float64(27.7), np.float64(26.8), np.float64(26.2), np.float64(26.3), np.float64(27.5), np.float64(26.7), np.float64(27.5), np.float64(27.3), np.float64(27.8), np.float64(26.3), np.float64(25.0), np.float64(28.7), np.float64(27.2), np.float64(27.2), np.float64(22.5), np.float64(23.0), np.float64(27.0)],
+            data: [np.float64(29.1), np.float64(27.1), np.float64(28.3), np.float64(27.4), np.float64(26.3), np.float64(26.7), np.float64(28.1), np.float64(28.0), np.float64(28.0), np.float64(26.4), np.float64(26.9), np.float64(27.7), np.float64(26.3), np.float64(32.4), np.float64(28.4), np.float64(26.6), np.float64(26.7), np.float64(28.4), np.float64(27.4), np.float64(27.1), np.float64(28.1), np.float64(27.0), np.float64(26.9), np.float64(27.1), np.float64(27.3), np.float64(27.3), np.float64(27.1), np.float64(28.4), np.float64(27.9), np.float64(27.7), np.float64(28.1), np.float64(27.3), np.float64(28.4), np.float64(28.0), np.float64(27.0), np.float64(27.3), np.float64(26.7), np.float64(26.0), np.float64(27.3), np.float64(26.9), np.float64(27.4), np.float64(27.1), np.float64(27.6), np.float64(26.7), np.float64(25.9), np.float64(28.0), np.float64(27.3), np.float64(22.9), np.float64(24.0), np.float64(26.4)],
             borderColor: '#4CAF50',
             backgroundColor: '#4CAF5022',
             fill: true,
@@ -129,10 +129,10 @@ new Chart(document.getElementById('chart1'), {
 new Chart(document.getElementById('chart2'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
         datasets: [{
             label: 'Snake Length Progress',
-            data: [np.float64(29.8), np.float64(26.8), np.float64(28.0), np.float64(27.8), np.float64(27.0), np.float64(26.2), np.float64(26.8), np.float64(28.7), np.float64(26.7), np.float64(28.8), np.float64(26.8), np.float64(27.0), np.float64(27.0), np.float64(27.7), np.float64(26.3), np.float64(30.8), np.float64(30.3), np.float64(26.7), np.float64(27.5), np.float64(28.0), np.float64(27.3), np.float64(27.5), np.float64(27.2), np.float64(28.5), np.float64(27.2), np.float64(26.7), np.float64(26.7), np.float64(27.3), np.float64(27.5), np.float64(26.8), np.float64(27.7), np.float64(26.8), np.float64(28.8), np.float64(28.8), np.float64(26.8), np.float64(28.7), np.float64(27.2), np.float64(26.7), np.float64(29.8), np.float64(27.2), np.float64(26.7), np.float64(27.7), np.float64(26.8), np.float64(26.2), np.float64(26.3), np.float64(27.5), np.float64(26.7), np.float64(27.5), np.float64(27.3), np.float64(27.8), np.float64(26.3), np.float64(25.0), np.float64(28.7), np.float64(27.2), np.float64(27.2), np.float64(22.5), np.float64(23.0), np.float64(27.0)],
+            data: [np.float64(29.1), np.float64(27.1), np.float64(28.3), np.float64(27.4), np.float64(26.3), np.float64(26.7), np.float64(28.1), np.float64(28.0), np.float64(28.0), np.float64(26.4), np.float64(26.9), np.float64(27.7), np.float64(26.3), np.float64(32.4), np.float64(28.4), np.float64(26.6), np.float64(26.7), np.float64(28.4), np.float64(27.4), np.float64(27.1), np.float64(28.1), np.float64(27.0), np.float64(26.9), np.float64(27.1), np.float64(27.3), np.float64(27.3), np.float64(27.1), np.float64(28.4), np.float64(27.9), np.float64(27.7), np.float64(28.1), np.float64(27.3), np.float64(28.4), np.float64(28.0), np.float64(27.0), np.float64(27.3), np.float64(26.7), np.float64(26.0), np.float64(27.3), np.float64(26.9), np.float64(27.4), np.float64(27.1), np.float64(27.6), np.float64(26.7), np.float64(25.9), np.float64(28.0), np.float64(27.3), np.float64(22.9), np.float64(24.0), np.float64(26.4)],
             borderColor: '#FF9800',
             backgroundColor: '#FF980022',
             fill: true,
@@ -156,7 +156,7 @@ new Chart(document.getElementById('chart2'), {
 });
 </script>
 
-<p class="timestamp">Report generated: 2026-02-04 08:07:52</p>
+<p class="timestamp">Report generated: 2026-02-04 08:08:54</p>
 </div>
 </body>
 </html>
