--- a/training_report.html
+++ b/training_report.html
@@ -35,25 +35,25 @@
 <div class="container">
 <h1>SLITHER.IO NEAT BOT - TRAINING ANALYSIS</h1>
 <p>File: training_stats.csv</p>
-<p>Total evaluations: 400</p>
+<p>Total evaluations: 403</p>
 <h3>OVERALL STATISTICS</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3224.0</td><td>8760.3</td><td>283.9</td></tr><tr><td>Survival Time (s)</td><td>93.4</td><td>126.8</td><td>60.0</td></tr><tr><td>Food Eaten</td><td>27.2</td><td>46</td><td>2</td></tr><tr><td>Max Length</td><td>27.2</td><td>46</td><td>2</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>Average</th><th>Max</th><th>Min</th></tr><tr><td>Fitness</td><td>3217.6</td><td>8760.3</td><td>283.9</td></tr><tr><td>Survival Time (s)</td><td>93.2</td><td>126.8</td><td>60.0</td></tr><tr><td>Food Eaten</td><td>27.2</td><td>46</td><td>2</td></tr><tr><td>Max Length</td><td>27.2</td><td>46</td><td>2</td></tr></table>
 <h3>CAUSE OF DEATH</h3>
-<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>310 (77.5%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>90 (22.5%)</span><span style='display: inline-block; width: 58px; height: 20px; background-color: #4CAF50;'></span></div></div>
+<h4>Deaths by Cause</h4><div style='font-family: monospace;'><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Starvation</span><span style='display: inline-block; width: 80px;'>313 (77.7%)</span><span style='display: inline-block; width: 200px; height: 20px; background-color: #4CAF50;'></span></div><div style='margin: 5px 0;'><span style='display: inline-block; width: 120px;'>Unknown</span><span style='display: inline-block; width: 80px;'>90 (22.3%)</span><span style='display: inline-block; width: 57px; height: 20px; background-color: #4CAF50;'></span></div></div>
 <h3>RECENT PERFORMANCE (Last 100 vs First 100)</h3>
-<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>3085.8</td><td>↓ -205.6</td></tr><tr><td>Avg Food</td><td>27.8</td><td>26.4</td><td>↓ -1.5</td></tr><tr><td>Avg Length</td><td>27.8</td><td>26.4</td><td>↓ -1.5</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>92.3</td><td>↓ -1.6</td></tr></table>
+<table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>Metric</th><th>First 100</th><th>Last 100</th><th>Change</th></tr><tr><td>Avg Fitness</td><td>3291.3</td><td>3086.6</td><td>↓ -204.7</td></tr><tr><td>Avg Food</td><td>27.8</td><td>26.4</td><td>↓ -1.5</td></tr><tr><td>Avg Length</td><td>27.8</td><td>26.4</td><td>↓ -1.5</td></tr><tr><td>Avg Survival</td><td>93.9</td><td>92.2</td><td>↓ -1.8</td></tr></table>
 <p>Bots that ate food: 100% → 100%</p>
 <h3>TOP 10 PERFORMERS</h3>
 <table border='1' cellpadding='8' cellspacing='0' style='border-collapse: collapse;'><tr style='background-color: #f0f0f0;'><th>#</th><th>GenomeID</th><th>Fitness</th><th>Time</th><th>Food</th><th>Len</th><th>Death</th></tr><tr><td>1</td><td>4</td><td>8760.3</td><td>120.1s</td><td>42</td><td>42</td><td>Unknown</td></tr><tr><td>2</td><td>136</td><td>8065.8</td><td>121.0s</td><td>39</td><td>39</td><td>Unknown</td></tr><tr><td>3</td><td>52</td><td>7487.8</td><td>122.2s</td><td>36</td><td>36</td><td>Unknown</td></tr><tr><td>4</td><td>220</td><td>6977.2</td><td>120.0s</td><td>33</td><td>33</td><td>Unknown</td></tr><tr><td>5</td><td>19</td><td>6819.1</td><td>126.2s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>6</td><td>17</td><td>6818.5</td><td>124.8s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>7</td><td>282</td><td>6752.5</td><td>120.0s</td><td>32</td><td>32</td><td>Unknown</td></tr><tr><td>8</td><td>95</td><td>6658.3</td><td>126.8s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>9</td><td>96</td><td>6616.9</td><td>125.7s</td><td>31</td><td>31</td><td>Unknown</td></tr><tr><td>10</td><td>271</td><td>6593.1</td><td>124.4s</td><td>31</td><td>31</td><td>Unknown</td></tr></table>
 <h3>LEARNING ASSESSMENT</h3>
 <p>Improvement (2nd half vs 1st half):</p>
-<p>✗ Fitness:  -329.1 (NO IMPROVEMENT)</p>
+<p>✗ Fitness:  -328.9 (NO IMPROVEMENT)</p>
 <p>✗ Food:     -0.7 (NOT LEARNING TO EAT!)</p>
 <br>
 <p>Recommendations:</p>
 <p>⚠ No fitness improvement - Consider restarting with fresh population</p>
 <br>
-<p>Analysis completed at 2026-02-04 08:26:26</p>
+<p>Analysis completed at 2026-02-04 08:27:28</p>
 <div class="chart-container">
     <canvas id="chart0"></canvas>
 </div>
@@ -61,10 +61,10 @@
 new Chart(document.getElementById('chart0'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50],
         datasets: [{
             label: 'Fitness Progress',
-            data: [np.float64(3642.6), np.float64(2851.0), np.float64(4849.5), np.float64(3288.2), np.float64(2342.7), np.float64(3829.6), np.float64(2979.9), np.float64(2924.4), np.float64(2817.5), np.float64(3294.9), np.float64(2852.1), np.float64(3056.7), np.float64(4493.9), np.float64(3656.6), np.float64(3741.0), np.float64(3701.4), np.float64(3784.4), np.float64(3960.8), np.float64(2382.5), np.float64(3666.0), np.float64(2419.8), np.float64(3288.0), np.float64(4230.5), np.float64(3222.9), np.float64(3437.5), np.float64(2932.0), np.float64(2970.7), np.float64(2817.8), np.float64(2904.1), np.float64(3852.2), np.float64(2818.3), np.float64(2893.7), np.float64(2290.3), np.float64(3236.8), np.float64(2822.9), np.float64(3772.8), np.float64(2880.9), np.float64(2896.8), np.float64(2235.1), np.float64(3408.0), np.float64(3855.3), np.float64(2529.3), np.float64(2644.0), np.float64(2748.7), np.float64(4647.6), np.float64(3305.3), np.float64(2504.8), np.float64(3452.5), np.float64(2767.4), np.float64(3300.6)],
+            data: [np.float64(3642.6), np.float64(2851.0), np.float64(4849.5), np.float64(3288.2), np.float64(2342.7), np.float64(3829.6), np.float64(2979.9), np.float64(2924.4), np.float64(2817.5), np.float64(3294.9), np.float64(2852.1), np.float64(3056.7), np.float64(4493.9), np.float64(3656.6), np.float64(3741.0), np.float64(3701.4), np.float64(3784.4), np.float64(3960.8), np.float64(2382.5), np.float64(3666.0), np.float64(2419.8), np.float64(3288.0), np.float64(4230.5), np.float64(3222.9), np.float64(3437.5), np.float64(2932.0), np.float64(2970.7), np.float64(2817.8), np.float64(2904.1), np.float64(3852.2), np.float64(2818.3), np.float64(2893.7), np.float64(2290.3), np.float64(3236.8), np.float64(2822.9), np.float64(3772.8), np.float64(2880.9), np.float64(2896.8), np.float64(2235.1), np.float64(3408.0), np.float64(3855.3), np.float64(2529.3), np.float64(2644.0), np.float64(2748.7), np.float64(4647.6), np.float64(3305.3), np.float64(2504.8), np.float64(3452.5), np.float64(2767.4), np.float64(3300.6), np.float64(2360.2)],
             borderColor: '#2196F3',
             backgroundColor: '#2196F322',
             fill: true,
@@ -95,10 +95,10 @@ new Chart(document.getElementById('chart0'), {
 new Chart(document.getElementById('chart1'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50],
         datasets: [{
             label: 'Food Eaten Progress',
-            data: [np.float64(28.8), np.float64(27.1), np.float64(28.5), np.float64(27.0), np.float64(26.4), np.float64(28.1), np.float64(27.6), np.float64(27.6), np.float64(26.8), np.float64(27.0), np.float64(27.2), np.float64(29.6), np.float64(29.9), np.float64(26.8), np.float64(27.8), np.float64(27.2), np.float64(27.2), np.float64(28.4), np.float64(27.0), np.float64(26.9), np.float64(27.0), np.float64(27.0), np.float64(27.9), np.float64(26.8), np.float64(28.5), np.float64(28.2), np.float64(28.1), np.float64(27.0), np.float64(28.2), np.float64(27.9), np.float64(26.9), np.float64(27.5), np.float64(26.1), np.float64(26.9), np.float64(26.9), np.float64(27.2), np.float64(27.4), np.float64(27.2), np.float64(25.2), np.float64(28.0), np.float64(27.9), np.float64(23.2), np.float64(24.4), np.float64(26.5), np.float64(27.9), np.float64(27.0), np.float64(28.1), np.float64(23.9), np.float64(26.6), np.float64(27.5)],
+            data: [np.float64(28.8), np.float64(27.1), np.float64(28.5), np.float64(27.0), np.float64(26.4), np.float64(28.1), np.float64(27.6), np.float64(27.6), np.float64(26.8), np.float64(27.0), np.float64(27.2), np.float64(29.6), np.float64(29.9), np.float64(26.8), np.float64(27.8), np.float64(27.2), np.float64(27.2), np.float64(28.4), np.float64(27.0), np.float64(26.9), np.float64(27.0), np.float64(27.0), np.float64(27.9), np.float64(26.8), np.float64(28.5), np.float64(28.2), np.float64(28.1), np.float64(27.0), np.float64(28.2), np.float64(27.9), np.float64(26.9), np.float64(27.5), np.float64(26.1), np.float64(26.9), np.float64(26.9), np.float64(27.2), np.float64(27.4), np.float64(27.2), np.float64(25.2), np.float64(28.0), np.float64(27.9), np.float64(23.2), np.float64(24.4), np.float64(26.5), np.float64(27.9), np.float64(27.0), np.float64(28.1), np.float64(23.9), np.float64(26.6), np.float64(27.5), np.float64(26.7)],
             borderColor: '#4CAF50',
             backgroundColor: '#4CAF5022',
             fill: true,
@@ -129,10 +129,10 @@ new Chart(document.getElementById('chart1'), {
 new Chart(document.getElementById('chart2'), {
     type: 'line',
     data: {
-        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
+        labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50],
         datasets: [{
             label: 'Snake Length Progress',
-            data: [np.float64(28.8), np.float64(27.1), np.float64(28.5), np.float64(27.0), np.float64(26.4), np.float64(28.1), np.float64(27.6), np.float64(27.6), np.float64(26.8), np.float64(27.0), np.float64(27.2), np.float64(29.6), np.float64(29.9), np.float64(26.8), np.float64(27.8), np.float64(27.2), np.float64(27.2), np.float64(28.4), np.float64(27.0), np.float64(26.9), np.float64(27.0), np.float64(27.0), np.float64(27.9), np.float64(26.8), np.float64(28.5), np.float64(28.2), np.float64(28.1), np.float64(27.0), np.float64(28.2), np.float64(27.9), np.float64(26.9), np.float64(27.5), np.float64(26.1), np.float64(26.9), np.float64(26.9), np.float64(27.2), np.float64(27.4), np.float64(27.2), np.float64(25.2), np.float64(28.0), np.float64(27.9), np.float64(23.2), np.float64(24.4), np.float64(26.5), np.float64(27.9), np.float64(27.0), np.float64(28.1), np.float64(23.9), np.float64(26.6), np.float64(27.5)],
+            data: [np.float64(28.8), np.float64(27.1), np.float64(28.5), np.float64(27.0), np.float64(26.4), np.float64(28.1), np.float64(27.6), np.float64(27.6), np.float64(26.8), np.float64(27.0), np.float64(27.2), np.float64(29.6), np.float64(29.9), np.float64(26.8), np.float64(27.8), np.float64(27.2), np.float64(27.2), np.float64(28.4), np.float64(27.0), np.float64(26.9), np.float64(27.0), np.float64(27.0), np.float64(27.9), np.float64(26.8), np.float64(28.5), np.float64(28.2), np.float64(28.1), np.float64(27.0), np.float64(28.2), np.float64(27.9), np.float64(26.9), np.float64(27.5), np.float64(26.1), np.float64(26.9), np.float64(26.9), np.float64(27.2), np.float64(27.4), np.float64(27.2), np.float64(25.2), np.float64(28.0), np.float64(27.9), np.float64(23.2), np.float64(24.4), np.float64(26.5), np.float64(27.9), np.float64(27.0), np.float64(28.1), np.float64(23.9), np.float64(26.6), np.float64(27.5), np.float64(26.7)],
             borderColor: '#FF9800',
             backgroundColor: '#FF980022',
             fill: true,
@@ -156,7 +156,7 @@ new Chart(document.getElementById('chart2'), {
 });
 </script>
 
-<p class="timestamp">Report generated: 2026-02-04 08:26:26</p>
+<p class="timestamp">Report generated: 2026-02-04 08:27:28</p>
 </div>
 </body>
 </html>
